--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="E:/cloudworkspace/zzc/softwareInstaller/library/substance.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
